--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 UPTIME_KUMA_DB_TYPE = MariaDB
-UPTIME_KUMA_DB_HOSTNAME = localhost
+UPTIME_KUMA_DB_HOSTNAME = 127.0.0.1
 UPTIME_KUMA_DB_PORT = 3306
 UPTIME_KUMA_DB_NAME = MrVenomYT
 UPTIME_KUMA_DB_USERNAME = root
